--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: college_project
-description: A new Flutter project.
+name: trading_point
+description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -28,6 +28,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_fonts: ^1.1.0
+  bezier_chart: ^1.0.17+1
+  flutter_sparkline: ^0.1.0
+  font_awesome_flutter: ^8.8.1
 
 dev_dependencies:
   flutter_test:
